--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <link rel="icon" href="favicon.ico">
+  <!-- <link rel="icon" href="favicon.ico"> -->
   <!-- http://www.xiconeditor.com/ -->
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
@@ -59,17 +59,19 @@
       <button type="submit">Confirm your order:</button>
     </form>
     <br>
-    <span id="protein-choices">
+    <div id="pizza-confirmation">
+      <span id="protein-choices">
       <p><b>Protein:</b></p>
-
-
     </span><br>
-    <span id="veg-etc-choices">
+      <span id="veg-etc-choices">
       <p><b>Veg et al.:</b></p>
     </span><br>
-    <span id="total-price">
+      <span id="total-price">
     <p><b>Cost of your delicious pizza pie:</b></p>
   </span>
+      <br><br>
+      <button id="menu-return">Back to Menu</button>
+    </div>
   </div>
 </body>
 
