trying to order another damn pizza pie

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
     </form>
     <br>
     <div id="pizza-confirmation">
+      <div>
+        <b>Protein:</b>
       <span id="protein-choices">
-      <p><b>Protein:</b></p>
+      <!-- <p><b>Protein:</b></p> -->
     </span><br>
+  </div>
       <span id="veg-etc-choices">
       <p><b>Veg et al.:</b></p>
     </span><br>
